<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Barcode Scanner</string>
    <string name="action_settings">Settings</string>

    <string name="main_result_success">Successfully returned: </string>
    <string name="main_result_failed">Failed to return barcode value</string>

    <string name="product_brand">Brand</string>
    <string name="product_title">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_size_weight">Size / Weight</string>
    <string name="product_ingredients">Ingredients</string>
    <string name="product_manufacturer">Manufacturer</string>
    <string name="product_origin">Country of Origin</string>
    <string name="product_calories">Calories</string>
    <string name="product_energy">Energy</string>
    <string name="product_protein">Protein</string>
    <string name="product_carbohydrate">Carbohydrate</string>
    <string name="product_fat_content">Fat Content</string>

    <string name="displayProductActivity_title">Product Information</string>
    <string name="addProductActivity_title">Add Product</string>
    <string name="editProductActivity_title">Edit Product</string>
    <string name="productListActivity_title">Products</string>

    <string name="productListActivity_no_products">No Products Found</string>
    <string name="productList_contextmenu_edit">edit</string>
    <string name="productList_contextmenu_delete">delete</string>

    <string name="about_title">About This App</string>
    <string name="about_text">See the source on github to see how to implement barcode scanning using either ZXing, Zbar, or the Scandit SDK</string>

    <string name="scan_button_label">Scan Item (ZXing)</string>
    <string name="scandit_button_label">Scan Item (Scandit)</string>
    <string name="scan_button_zbar">Scan Item (Zbar)</string>
    <string name="scan_button_redlaser">Scan Item (Red Laser)</string>
    <string name="about_button_label">About</string>
    <string name="exit_button_label">Exit</string>

    <string name="submit_button_label">Submit</string>

    <string name="options_menu_ScanBarcode">Scan Barcode</string>
    <string name="options_menu_ViewProducts">View Products</string>
    <string name="options_menu_ViewProductsOnline">json Products</string>

    <string name="db_product_not_found">Product does not exist in database</string>
    <string name="db_product_found">Product found</string>
    <string name="db_product_added">Successfully added</string>
    <string name="db_product_deleted">Product removed from database</string>
</resources>
